--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "acorn": "^7.4.1",
     "acorn-node": "^1.8.2",
     "acorn-walk": "^7.2.0",
+    "alpinejs": "^3.10.3",
     "anymatch": "^3.1.2",
     "arg": "^5.0.2",
     "binary-extensions": "^2.2.0",
